# intrinsic-model-server

./: .gitignore  Dockerfile  Dockerfile.modelserver  Dockerfile.workerserver  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: automerge-deps.yml  autorelease.yml  docker.yml  frontend.yml  python-app.yml  spellcheck.yml
docs/: README.md  index.html
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  store.ts
frontend/src/api/: index.ts
frontend/src/api/core/: ApiError.ts
frontend/src/api/models/: Body_upload_output_file_workers_jobs__job_id__upload_post.ts  CompletionInference.ts  CompletionInferenceRequest.ts  CompletionModelParams.ts  CreateTaskRequest.ts  DiskImportSource.ts  DiskLocator.ts  FailedTaskState.ts  FineTuneJobIn.ts  FineTuneJobOut.ts  FineTuneMethod.ts  FinishedTaskState.ts  GetRegisteredModelsResponse.ts  GetSavedExperimentsResponse.ts  GrammarDefinition.ts  HFFile.ts  HFImportSource.ts  HFLocator.ts  HealthStatus.ts  ImportMetadata.ts  ImportRequest.ts  InProgressState.ts  InvocationMeasurementsOut.ts  InvocationsSummary.ts  JobState.ts  JobType.ts  ListHFFilesResponse.ts  Locator.ts  LoraOut.ts  ModelInfo.ts  ModelRuntime.ts  ModelType.ts  ModelVersion.ts  ModelVersionInternal.ts  PercentileMetrics.ts  RegisterModelRequest.ts  RegisteredModel.ts  RemoteWorkerDetailsOut.ts  SavedExperimentIn.ts  SavedExperimentOut.ts  (+8 more)
frontend/src/api/services/: DefaultService.ts  baseService.ts  completion.tsx  hfService.ts  huggingFaceService.ts  statusService.ts  util.ts  v1.ts
frontend/src/components/: Card.tsx  CompletionComponent.tsx  CompletionLivePreview.tsx  EditableCode.tsx  InferenceExploration.tsx  InferenceRunner.tsx  ModelCardView.tsx  Section.tsx
frontend/src/data/: endorsedModels.ts  featureUpdates.ts
frontend/src/pages/: Home.tsx  ImportModel.tsx  Model.tsx  ModelPage.tsx  NewModel.tsx  NotFound.tsx  Task.tsx  Workspace.tsx
frontend/src/services/: baseService.ts  completion.tsx
frontend/src/state/: appSlice.ts  hooks.ts  modelSlice.ts  store.ts
frontend/src/styles/: index.css
frontend/src/utils/: prod.ts  semver.ts
interface/: package-lock.json  package.json
modelserver/: __init__.py  app.py  dependencies.py  ggml.py  model_worker.py  remoteworker.py  task_worker.py  taskimpl.py  tasks.py  test_app.py  test_semver.py
modelserver/api/: _types.py  routes.py  test_api.py  types.py
modelserver/db/: __init__.py  _core.py  _tables.py  core.py  remoteworker.py  sqlite.py  test_db.py
modelserver/db/tasks/: __init__.py
modelserver/loaders/: __init__.py  core.py  disk.py  hf.py  locators.py  test_loaders.py
modelserver/metrics/: _core.py  _duckdb.py  invocations.py
modelserver/middleware/: __init__.py  staticfiles.py
modelserver/routes/: admin.py  health.py  hfbrowse.py  remoteworker.py  test_types.py  v1.py
modelserver/types/: api.py  locator.py  remoteworker.py  tasks.py  test_types.py  workers.py
scripts/: gen_certs.py  pycheck.sh
workerproto/: worker_v1.proto  worker_v1_pb2.py  worker_v1_pb2.pyi  worker_v1_pb2_grpc.py
workerserver/: __init__.py  finetune.py  gguf_conversions.py  worker.py
(+28 files in other folders)
