[tool.poetry]
name = "modelserver"
version = "0.2.0"
description = ""
authors = ["Andrew Duffy <andrew@intrinsiclabs.ai>"]
readme = "README.md"

[tool.poetry.scripts]
modelserver = "modelserver.app:entrypoint"
workerserver = "workerserver.worker:entrypoint"
selfsign = "scripts.gen_certs:entrypoint"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
fastapi = "^0.109.0"
llama-cpp-python = "^0.2.32"
huggingface-hub = "0.20.1"
duckdb = "^0.9.1"
uvicorn = "^0.25.0"
colorlog = "^6.8.0"
sqlalchemy = "^2.0.25"
websockets = "^11.0.3"
python-dotenv = "^1.0.0"
grpcio = "^1.60.0"
python-multipart = "^0.0.6"
protobuf = "^4.25.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
isort = "^5.13.2"
black = "^23.12.1"
grpcio-tools = "^1.60.0"
pyopenssl = "^23.3.0"
pytest = "^7.4.4"


[tool.poetry.group.remoteworker.dependencies]
trl = "^0.7.2"
transformers = "^4.36.2"
httpx = "^0.26.0"
peft = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
